--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "dotenv": "^16.3.1",
     "fast-csv": "^4.3.6",
     "moment": "^2.29.4",
+    "prompt": "^1.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/prompt": "^1.1.7"
   }
 }
