--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cld_get_assets",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "A script to get assets from Cloudinary and save them to a CSV file. It uses the Cloudinary SDK for Node.js and the Search API.",
   "scripts": {
-    "run:get_assets": "ts-node ./get_assets.ts"
+    "build": "tsc",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^20.8.9",
     "cloudinary": "^1.41.0",
+    "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "fast-csv": "^4.3.6",
     "moment": "^2.29.4",
