--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "cld_get_assets",
   "version": "0.1.0",
   "description": "A nifty CLI tool to get assets from Cloudinary",
+  "main": "dist/index.js",
+  "bin": {
+    "cld-get-assets": "dist/index.js"
+  },
   "scripts": {
+    "prepublishOnly": "tsc",
     "build": "tsc",
     "start": "ts-node src/index.ts"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "cloudinary",
+    "cli"
+  ],
+  "author": "Brad Johnson",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.8.9",
@@ -16,11 +24,11 @@
     "dotenv": "^16.3.1",
     "fast-csv": "^4.3.6",
     "moment": "^2.29.4",
-    "prompt": "^1.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "prompt": "^1.3.0"
   },
   "devDependencies": {
-    "@types/prompt": "^1.1.7"
+    "@types/prompt": "^1.1.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
