--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Brad Johnson",
   "license": "ISC",
   "dependencies": {
+    "@inquirer/prompts": "^3.2.0",
     "@types/node": "^20.8.9",
     "cloudinary": "^1.41.0",
     "commander": "^11.1.0",
@@ -27,6 +28,7 @@
     "prompt": "^1.3.0"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.6",
     "@types/prompt": "^1.1.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
