Fixed old metadata issue. Changing to scoped package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cld-get-assets",
+  "name": "@b-rad/cld-get-assets",
   "version": "0.2.3",
   "description": "A nifty CLI tool to get assets from Cloudinary",
   "main": "dist/index.js",
